# fastapi-cloud-run

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  README.md  cloudbuild.yml  pyproject.toml  requirements.txt
.deploy/: Dockerfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: branch_checker.sh
.github/workflows/: ci.yml
